--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="Reasources/css/style.css">
   </head>
   <body>
-    <header>
-      <h1>Broadway Design</h1>
+    <div class="background-image">
+      <h1 class="header1">Broadway Design</h1>
       <nav>
         <ul>
           <li><a href="#"></a>Home</li>
@@ -17,7 +17,7 @@
           <li><a href="#"></a>Contact</li>
         </ul>
       </nav>
-    </header>
+    </div>
     <div class="process">
       <h2>Our Process</h2>
     </div>
